--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ignore-cli",
   "version": "1.0.0",
-  "description": "A fast command line tool for adding .ignore files to your project",
+  "description": "A convenient command line tool for adding .ignore files to your project",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
@@ -15,10 +15,12 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "lint": "eslint src tests",
-    "lint:fix": "eslint src tests --fix",
-    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "lint": "biome lint ./src ./tests",
+    "lint:fix": "biome lint --write ./src ./tests",
+    "format": "biome format --write ./src ./tests",
+    "format:check": "biome format ./src ./tests",
+    "check": "biome check ./src ./tests",
+    "check:fix": "biome check --write ./src ./tests",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run build"
   },
@@ -52,11 +54,9 @@
     "ora": "^8.1.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.10.5",
-    "eslint": "^9.17.0",
-    "prettier": "^3.4.2",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.26.0",
     "vitest": "^3.0.5"
   }
 }
