--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,6 @@ permissions:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    environment: default
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -40,7 +39,5 @@ jobs:
       - name: Build
         run: pnpm run build
 
-      - name: Publish to npm
+      - name: Publish to npm (Trusted Publisher)
         run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
