--- a/biome.json
+++ b/biome.json
@@ -1,35 +1,39 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "organizeImports": {
-    "enabled": true
-  },
-  "linter": {
-    "enabled": true,
-    "rules": {
-      "recommended": true,
-      "correctness": {
-        "noUnusedVariables": "error",
-        "noUnusedImports": "error"
-      },
-      "style": {
-        "noParameterAssign": "off"
-      }
-    }
-  },
-  "formatter": {
-    "enabled": true,
-    "indentStyle": "space",
-    "indentWidth": 2,
-    "lineWidth": 100
-  },
-  "javascript": {
+    "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+    "organizeImports": {
+        "enabled": true
+    },
+    "linter": {
+        "enabled": true,
+        "rules": {
+            "recommended": true,
+            "correctness": {
+                "noUnusedVariables": "error",
+                "noUnusedImports": "error"
+            },
+            "style": {
+                "noParameterAssign": "off"
+            }
+        }
+    },
     "formatter": {
-      "semicolons": "always",
-      "quoteStyle": "double",
-      "trailingCommas": "es5"
+        "enabled": true,
+        "indentStyle": "space",
+        "indentWidth": 2,
+        "lineWidth": 100
+    },
+    "javascript": {
+        "formatter": {
+            "semicolons": "always",
+            "quoteStyle": "double",
+            "trailingCommas": "es5"
+        }
+    },
+    "files": {
+        "ignore": [
+            "dist/**",
+            "node_modules/**",
+            "*.json"
+        ]
     }
-  },
-  "files": {
-    "ignore": ["dist/**", "node_modules/**", "*.json"]
-  }
 }
